--- a/src/scss/partials/_main.scss
+++ b/src/scss/partials/_main.scss
@@ -83,13 +83,19 @@ $accent-color-dark: #7B1FA2;
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 *:focus {
   outline: none;
 }
 
 body {
-  background-color: $dark-gray;
+  background-color: white;
   font-family: $Montserrat;
   overflow-x: hidden;
+}
+
+.app {
+  width: 100%;
+  height: 100vh;
 }
