--- a/src/scss/partials/_login.scss
+++ b/src/scss/partials/_login.scss
@@ -1,7 +1,77 @@
+.foot {
+  border: 1px solid red;
+  height: 200px;
+}
+form {
+  margin-top: 50%;
+}
+.hero {
+  color: white;
+  .accent {
+    color: $accent-color;
+  }
+  h1 {
+    font-size: 3em;
+  }
+  .hero-text {
+    margin-top: 50%;
+  }
+}
+.login-button {
+  @include flat-button($accent-color);
+  color: $primary-light-text;
+  display: block;
+  font-size: 1.5em;
+  font-weight: 100;
+  height: 50px;
+  margin: auto;
+  width: 250px;
+  transition: transform 0.3s;
+  transition-delay: 0.1s;
+  &:hover {
+    background-color: $accent-color;
+    color: $primary-dark-text;
+    cursor: pointer;
+  }
+}
 .login-container {
+  height: calc(100% - 270px);
+  overflow: auto;
   width: 100%;
-  height: calc(100% - 75px);
+  // DO NOT ALPHABETIZE
+  background: url('../../build/assets/img/bg.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  // --------------
+}
+.login-footer {
+  background-color: white;
+  bottom: 0;
+  height: 200px;
   position: absolute;
-  top: 75px;
-  background-color: $dark-gray;
+  width: 100%;
+}
+.login-input {
+  background-color: $background-color-none;
+  border: none;
+  border-bottom: 1px solid white;
+  color: $primary-light-text;
+  display: block;
+  font-size: 1.7em;
+  margin: auto;
+  margin-bottom: 20px;
+  padding: 0 0 2px 10px;
+  width: 250px;
+}
+.hide {
+  opacity: 0;
+  transition: opacity 0.3s;
+}
+.show {
+  opacity: 1;
+  transition: opacity 0.3s;
+  transition-delay: 0.3s;
+}
+.slide-up {
+  transform: translate(0, -50px);
 }
