--- a/src/scss/partials/_main.scss
+++ b/src/scss/partials/_main.scss
@@ -14,76 +14,22 @@ $light-gray: #FAFAFA;
 $med-gray: #F5F5F5;
 $dark-gray: #E0E0E0;
 
-$primary-color: #00AA8D;
-$primary-color-light: #00BF9A;
-$primary-color-dark: #008975;
+$accent-color: #FFEB3B;
+$accent-color-light: #FFF59D;
+$accent-color-dark: #FFEB3B;
 
-$accent-color: #9C27B0;
-$accent-color-light: #BA68C8;
-$accent-color-dark: #7B1FA2;
-
-// mixins
-@mixin position-absolute($left, $top) {
-  position: absolute;
-  left: $left;
-  top: $top;
-}
-
-@mixin absolute-centered($left, $top) {
-  position: absolute;
-  left: $left;
-  top: $top;
-  transform: translate(-50%, -50%);
-}
-
-@mixin material($width, $height, $bg-color, $shadow) {
-  background-color: $bg-color;
-  width: $width;
-  height: $height;
-  border-radius: 5px;
-  box-shadow: 0px 7px 5px $shadow;
-}
-
-@mixin material-flexible($width, $height, $bg-color, $shadow) {
-  background-color: $bg-color;
-  min-width: $width;
-  min-height: $height;
-  border-radius: 5px;
-  box-shadow: 0px 7px 5px $shadow;
-}
-
-@mixin material-button($width, $height, $bg-color, $shadow) {
-  display: block;
-  width: $width;
-  height: $height;
-  background-color: $bg-color;
-  box-shadow: 0px 3px 2px $shadow;
-  border: none;
-  border-radius: 3px;
-  line-height: $height;
-  text-align: center;
-
-  // hover styles
-  &:hover {
-    cursor: pointer;
-    box-shadow: 4px 7px 3px $shadow;
-    width: $width + 3;
-    height: $height + 3;
-  }
-  &:active {
-    box-shadow: 0px 3px 2px $shadow;
-    width: $width;
-    height: $height;
-  }
-
-  transition: width 0.15s, height 0.15s, box-shadow 0.15s;
-}
+$background-color-dark: rgba(0,0,0,0.8);
+$background-color-none: rgba(0,0,0,0);
 
 // reset styles
 * {
+  box-sizing: border-box;
+  font-weight: 100;
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+  a {
+    text-decoration: none;
+  }
 }
 *:focus {
   outline: none;
@@ -98,4 +44,10 @@ body {
 .app {
   width: 100%;
   height: 100vh;
+}
+
+@mixin flat-button($border-color) {
+  background-color: $background-color-none;
+  border-radius: 3px;
+  border: 1px solid $border-color;
 }
