--- a/src/scss/partials/_nav.scss
+++ b/src/scss/partials/_nav.scss
@@ -1,22 +1,25 @@
 .logo {
-  text-align: right;
+  color: $accent-color;
   padding: 0;
+  &:hover {
+    cursor: default;
+  }
+  .logo-text {
+    margin-left: 15px;
+  }
 }
 nav {
-  height: 75px;
-  line-height: 75px;
+  height: 70px;
+  line-height: 70px;
 }
 .nav-container {
-  background-color: rgba(0,0,0,0.8);
-  height: 75px;
-  line-height: 75px;
+  background-color: $background-color-dark;
 }
-
 .register-button {
   color: $primary-light-text;
   font-weight: 100;
-  text-decoration: none;
-  padding: 0;
+  padding: 0 15px 0 0;
+  text-align: right;
   &:hover {
     opacity: 0.7;
   }
