--- a/src/scss/partials/_main.scss
+++ b/src/scss/partials/_main.scss
@@ -28,6 +28,7 @@ $background-color-none: rgba(0,0,0,0);
   margin: 0;
   padding: 0;
   a {
+    color: $primary-light-text;
     text-decoration: none;
   }
 }
