--- a/src/scss/partials/_login.scss
+++ b/src/scss/partials/_login.scss
@@ -64,6 +64,19 @@ form {
   padding: 0 0 2px 10px;
   width: 250px;
 }
+.login-error {
+  @include flat-button(rgba(255,0,102,0.3));
+  background-color: rgba(255,0,102,0.55);
+  color: $primary-light-text;
+  display: block;
+  width: 250px;
+  margin: 15px auto 0px;
+  padding: 0px 5px;
+  text-align: center;
+  transition: transform 0.3s;
+  transition-delay: 0.1s;
+  opacity: 0;
+}
 .hide {
   opacity: 0;
   transition: opacity 0.3s;
